# AOC-2024

problem-01/: Cargo.toml  problem-01.md
problem-01/src/: main.rs
problem-02/: problem-02.md
problem-02/src/: main.rs
